chore: eslint 및 prettier 설정

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint", "simple-import-sort"],
+  "root": true,
+  "rules": { "simple-import-sort/imports": "warn", "simple-import-sort/exports": "warn", "react/display-name": "off" }
 }
