--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "eslint-config-prettier": "^8.8.0",
