--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "stylelint": "stylelint --ignore-path .gitignore '**/*.(ts|tsx)'"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -22,11 +23,20 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
+    "@stylelint/postcss-css-in-js": "^0.38.0",
     "@svgr/webpack": "^8.0.1",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^3.0.0"
+    "postcss": "^8.4.27",
+    "postcss-html": "^1.5.0",
+    "postcss-syntax": "^0.36.2",
+    "prettier": "^3.0.0",
+    "stylelint": "^15.10.2",
+    "stylelint-config-concentric-order": "^5.1.0",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-styled-components": "^0.1.1"
   }
 }
